[package]
name = "ngrtc"
version = "0.0.0"
edition = "2021"
authors = ["Rain Liu <y@liu.x>"]
description = "Next Generation RTC in Rust"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/ngrtc"
repository = "https://github.com/ngr-tc/ngrtc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
